# ai-ml-experiments

./: Makefile  README.md  pyproject.toml
documents/bibliometric/bibliometric_data/: citation_data.xlsx
language/documents/bibliometric/: bibliometric_citation_analysis.ipynb
language/documents/bibliometric/bibliometric_data/: CitationAnalysis.gephi  Extracting Citation Data from SCOPUS.pptx
language/documents/document_summarization/: langchain_document_summarization.ipynb
language/llm/llama/: fine-tuned-llama-3-2-3b-financial-aid-usecase-kagglenb.ipynb
language/llm/llama/data/: eval_data.csv  synthetic_population_data.csv
language/llm/multi_llm/attention_experiments/: multi_llm_attention_experiment_practice.ipynb
language/llm/phi_4/: fine-tuned-phi-4-mini-financial-aid-chat-usecase.ipynb  fine-tuned-phi4-mini-instruct-student-chat-local.ipynb
llm/chatgpt/: The_Notebook.ipynb
llm/chatgpt/Challenge Task/: Challenge_task.ipynb
llm/chatgpt/Practice Task/: training_data.json
medical/: README.md
medical/disease/covid19/: covid19_xray_detection.ipynb
medical/fractures/: fracture-detection-with-pytorch-fracatlas.ipynb
medical/insurance/: medical_insurance_premium_predictions.ipynb
social_media/pii_disclosure/: social-media-pii-disclosure-analyses-reddit.ipynb
structured_data_analyses/insurance/: medical_insurance_premium_predictions.ipynb
structured_data_analyses/self_efficacy_workplace_analysis/: Diebold_Dataset.csv  diebold_self-efficacy_analysis_female_employees.ipynb
vision/medical/fractures/: fracture-detection-with-pytorch-fracatlas.ipynb
(+3 files in other folders)
