[tool.poetry]
name = "text-and-convo-ai-ml-experiments"
version = "0.0.1"
description = "A series of AI/ML experiments for text, documents, and conversational data"
authors = ["Eidan J. Rosado"]
readme = "README.md"
homepage = "https://github.com/EdyVision/text-and-convo-ai-ml-experiments"
repository = "https://github.com/EdyVision/text-and-convo-ai-ml-experiments"
keywords = ["machine learning", "conversational ai", "text", "social media"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3", ]
include = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dataclasses-json = "^0.5.7"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pillow = "^9.3.0"  # security dependency
spacy = { version = "^3.5.2" }
networkx = "^3.3"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
plotly = "^5.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "22.12.0"
pylint = "^2.15.4"
mypy = "^0.982"
coverage = "^6.4.4"
assertpy = "^1.1"
Faker = "^14.2.1"
matplotlib = "^3.6.1"
ipykernel = "^6.16.0"
jupyter = "^1.0.0"
jupyter_core = "^4.11.2"
importlib-resources = "^5.9.0"
seaborn = "^0.12.0"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
secondary = false


[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"